--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tango-ui",
-  "version": "0.1.2",
+  "version": "0.0.1",
   "description": "A slick UI component library for react",
   "main": "index.js",
   "scripts": {
@@ -37,6 +37,7 @@
     "babel-plugin-transform-react-display-name": "^6.8.0",
     "babel-preset-es2015": "^6.13.2",
     "babel-preset-react": "^6.11.1",
+    "babel-preset-stage-2": "^6.13.0",
     "babel-runtime": "^6.11.6",
     "chai": "^3.5.0",
     "mocha": "^3.0.2"
