--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "babel-preset-stage-2": "^6.13.0",
     "babel-runtime": "^6.11.6",
     "chai": "^3.5.0",
-    "mocha": "^3.0.2"
+    "mocha": "^3.0.2",
+    "webpack": "^1.13.2"
   },
   "dependencies": {
     "react": "^15.3.1",
