--- a/package.json
+++ b/package.json
@@ -1,50 +1,27 @@
 {
-  "name": "tango-ui",
-  "version": "0.0.2",
-  "description": "A slick UI component library for react",
-  "main": "index.js",
+  "name": "tango-tag",
+  "version": "0.0.1",
+  "description": "",
+  "private": true,
+  "main": "lib/index.js",
   "scripts": {
-    "test": "make test",
-    "compile": "babel -d lib/ src/",
-    "prepublish": "npm run compile"
+    "build:example": "reactpack --no-extract --no-source-map --no-html example/index.js example/",
+    "prepublish": "./node_modules/.bin/babel -d lib src/"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+ssh://git@github.com/jyotirmaybanerjee/tango-ui.git"
-  },
-  "keywords": [
-    "React",
-    "UI",
-    "component",
-    "library",
-    "Material",
-    "Design",
-    "Bootstrap",
-    "React-Bootstrap"
-  ],
   "author": "Jyotirmay Banerjee <me@jyotirmaybanerjee.com> (http://www.jyotirmaybanerjee.com)",
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/jyotirmaybanerjee/tango-ui/issues"
+  "peerDependencies": {
+    "react": "^15.0.0 || ^0.14.0"
   },
-  "homepage": "https://github.com/jyotirmaybanerjee/tango-ui#readme",
   "devDependencies": {
-    "babel": "^6.5.2",
-    "babel-core": "^6.13.2",
-    "babel-eslint": "^6.1.2",
-    "babel-loader": "^6.2.5",
-    "babel-plugin-react-transform": "^2.0.2",
-    "babel-plugin-transform-react-display-name": "^6.8.0",
+    "babel-cli": "^6.11.4",
     "babel-preset-es2015": "^6.13.2",
     "babel-preset-react": "^6.11.1",
-    "babel-preset-stage-2": "^6.13.0",
-    "babel-runtime": "^6.11.6",
-    "chai": "^3.5.0",
-    "mocha": "^3.0.2",
-    "webpack": "^1.13.2"
-  },
-  "dependencies": {
+    "babel-preset-stage-0": "^6.5.0",
     "react": "^15.3.1",
-    "react-dom": "^15.3.1"
+    "react-autosuggest": "^5.1.0",
+    "react-dom": "^15.3.1",
+    "react-input-autosize": "^1.1.0",
+    "reactpack": "^0.7.5"
   }
 }
