--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "tango-tag",
-  "version": "0.0.1",
+  "name": "tango-ui",
+  "version": "0.0.3",
   "description": "",
   "private": true,
   "main": "lib/index.js",
@@ -15,9 +15,11 @@
   },
   "devDependencies": {
     "babel-cli": "^6.11.4",
+    "babel-eslint": "^6.1.2",
     "babel-preset-es2015": "^6.13.2",
     "babel-preset-react": "^6.11.1",
     "babel-preset-stage-0": "^6.5.0",
+    "eslint-plugin-react": "^6.1.2",
     "react": "^15.3.1",
     "react-autosuggest": "^5.1.0",
     "react-dom": "^15.3.1",
