--- a/package.json
+++ b/package.json
@@ -1,15 +1,33 @@
 {
   "name": "tango-ui",
   "version": "0.0.4",
-  "description": "",
+  "description": "A slick UI component library for react",
   "private": false,
   "main": "lib/index.js",
   "scripts": {
     "build:example": "reactpack --no-extract --no-source-map --no-html example/index.js example/",
     "prepublish": "./node_modules/.bin/babel -d lib src/"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+ssh://git@github.com/jyotirmaybanerjee/tango-ui.git"
+  },
+  "keywords": [
+    "React",
+    "UI",
+    "component",
+    "library",
+    "Material",
+    "Design",
+    "Bootstrap",
+    "React-Bootstrap"
+  ],
   "author": "Jyotirmay Banerjee <me@jyotirmaybanerjee.com> (http://www.jyotirmaybanerjee.com)",
   "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/jyotirmaybanerjee/tango-ui/issues"
+  },
+  "homepage": "https://github.com/jyotirmaybanerjee/tango-ui#readme",
   "peerDependencies": {
     "react": "^15.0.0 || ^0.14.0"
   },
